
 - FILE-STRING-LENGTH only works with file streams, for which it returns
   the right value, and with Gray streams, which output NIL.

 - When ECL is built with --enable-unicode, it uses its own database for
   Unicode properties instead of tolower, toupper, etc (Based on code
   from SBCL)

 - A bug in the binary file loaded prevented loading a recompiled file.

 - READ-DELIMITED-LIST interpreted the value of :RECURSIVEP the wrong way.

* AMOP:

 - In DEFCLASS, the :TYPE of slots was ignored.

 - ECL now sets the proper value for the SLOT-DEFINITION-INITFUNCTION and
   SLOT-DEFINITION-INITFORM of each effective and direct slot definition.

 - The canonicalized default arguments list now contains functions instead
   of the forms to be evaluated.

 - With null safety settings, the slot accessors for structures with
   specialized vector types were not properly compiled.

* Visible changes:

 - New function (EXT:HEAP-SIZE &optional NEW-MAX-HEAP-SIZE) can change the      
   memory limits.

 - LOG does not overflow on bignums (LOG (ASH 1 128) 2) => 128

 - Instead of internally using the format (ARRAY T), Unicode strings are
   now stored using an (ARRAY (SIGNED-BYTE 32)). This saves memory on
   systems with 64-bit pointers.

 - Faster calling conventions for function objects, generic functions, symbols
   and interpreted bytecodes, reduce time by 50% in best cases.

 - New, more efficient bytecodes for parsing the function lambda list, instead
   of using a common function.

 - ECL provides macros that define specialized integer types (ecl_uint8_t,
   ecl_int32_t, ... up to ecl_int64_t). These macros can be used to check for
   support of these specialized types in arrays and in compilers. There are
   also companion functions or macros, ecl_make_[u]int*_t and ecl_to_[u]int*_t
   that respectively convert to and from Lisp integers.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***