@@ -1379,8 +1379,14 @@ cl_symbols[] = {
 {KEY_ "WAIT", KEYWORD, NULL, -1, OBJNULL},
 
 {EXT_ "BYTE8", EXT_ORDINARY, NULL, -1, OBJNULL},
+{EXT_ "BYTE16", EXT_ORDINARY, NULL, -1, OBJNULL},
+{EXT_ "BYTE32", EXT_ORDINARY, NULL, -1, OBJNULL},
+{EXT_ "BYTE64", EXT_ORDINARY, NULL, -1, OBJNULL},
 {EXT_ "COMPILER-LET", EXT_FORM, NULL, -1, OBJNULL},
 {EXT_ "INTEGER8", EXT_ORDINARY, NULL, -1, OBJNULL},
+{EXT_ "INTEGER16", EXT_ORDINARY, NULL, -1, OBJNULL},
+{EXT_ "INTEGER32", EXT_ORDINARY, NULL, -1, OBJNULL},
+{EXT_ "INTEGER64", EXT_ORDINARY, NULL, -1, OBJNULL},
 {EXT_ "LAMBDA-BLOCK", EXT_ORDINARY, NULL, -1, OBJNULL},
 {EXT_ "QUIT", EXT_ORDINARY, si_quit, -1, OBJNULL},
 #ifdef CLOS
