@@ -1379,8 +1379,14 @@ cl_symbols[] = {
 {KEY_ "WAIT",NULL},
 
 {EXT_ "BYTE8",NULL},
+{EXT_ "BYTE16",NULL},
+{EXT_ "BYTE32",NULL},
+{EXT_ "BYTE64",NULL},
 {EXT_ "COMPILER-LET",NULL},
 {EXT_ "INTEGER8",NULL},
+{EXT_ "INTEGER16",NULL},
+{EXT_ "INTEGER32",NULL},
+{EXT_ "INTEGER64",NULL},
 {EXT_ "LAMBDA-BLOCK",NULL},
 {EXT_ "QUIT","si_quit"},
 #ifdef CLOS
